--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    <title>Excursion</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1 class="pagetitle">Discover Hidden Places in the World Around You</h1>
+    <p><a class="cta" href="">Download Excursion Content (coming soon)</a></p>
+    <video src="excursionvideo.mp4" autoplay poster="posterimage.jpg">
+    </video>
+    <h1 class="guide">Your Personal Travel Guide</h1>
+    <p>Excursion remembers places you like, and reccomends new points of interest around you</p>
+    <img src="camp.jpg" alt="Campsite">
+    <p>  </p>
+    <img src="phone.png" alt="Phone">
+    <h1 class="android">Coming Soon for Android</h1>
+    <p><a class="cta" href="">Download Excursion Content (coming soon)</a></p>
+    <p class="Copyright">C Excursion</p>
   </body>
 </html>
